BARC UAT/src/objects/Address_Master__c.object
<CustomObject>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Country</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Town_Village__c</fullName>
        <label>Town / Village</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Address Master</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Pincode</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Address Master</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>